# ex3

./: CMakeLists.txt  calc.cpp  calcDialog.cpp  calcDialog.h  calcDialog.ui
